# darnlink

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORMAT.md  README.md  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
demo/: demo.tape
docs/: elevating-your-link-gate.md
hooks/: pre-commit
recipes/: README.md  darnlink-gate  darnlink-gate.ps1
recipes/examples/: Jenkinsfile-stage.groovy  README.md  github-actions-darnlink-gate.yml  pre-commit  pre-push
specs/001-robustify-and-repair/: plan.md  quickstart.md  spec.md  tasks.md
specs/002-ignore-code-blocks/: spec.md
specs/003-ignore-file-marker/: spec.md
specs/004-standard-yaml-frontmatter/: spec.md
specs/005-no-create-frontmatter-for/: spec.md
specs/006-ignore-links-marker/: spec.md
specs/007-darnlink-check/: spec.md
specs/007-darnlink-gate/: spec.md
specs/009-glob-excludes/: spec.md
specs/010-web-robustness/: spec.md
specs/010-write-scope/: spec.md
specs/011-directory-links/: spec.md
specs/011-web-robustness/: spec.md
specs/012-create-readme/: spec.md
specs/013-web-robustness/: spec.md
specs/014-create-readme-skip-external/: spec.md
src/darnlink/: __init__.py  cli.py  frontmatter_edit.py  frontmatter_index.py  links.py  paths.py  repair.py  report.py  robustify.py  scope.py  weblinks.py
tests/: test_acceptance.py  test_bom.py  test_check.py  test_conflict.py  test_create_readme.py  test_directory_links.py  test_glob_excludes.py  test_ignore_links.py  test_invalid_frontmatter.py  test_line_endings.py  test_links.py  test_paths.py  test_robustify.py  test_weblinks.py  test_write_scope.py
tools/: check.sh
