[project]
name = "darnlink"
version = "0.4.0"
description = "auto-healing Markdown links — anchor links to a UUID: repair moved links, robustify plain ones"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "txemi" }]
keywords = ["markdown", "links", "uuid", "robust-links", "self-healing", "documentation"]
dependencies = ["python-frontmatter>=1.0"]

[project.scripts]
darnlink = "darnlink.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/darnlink"]
